# skillcheck

./: .gitignore  CREDITS.md  INSTALL-OPENCLAW.md  PRD.md  README.md  SKILL.md  analyzer.py  formatter.py  ip_geolocation.py  language_detector.py  main.py  prompt_builder.py  pyproject.toml  research.md  result_parser.py  url_classifier.py
tests/: test_analyzer.py  test_formatter.py  test_main.py  test_new_flags.py  test_prompt_builder.py  test_result_parser.py  test_url_classifier.py
tests/fixtures/: safe_skill.md  sample_llm_response.json  unsafe_skill.md
