[project]
name = "skillcheck"
version = "0.1.0"
description = "Security scanner for AI agent skill files - analyzes markdown skills for prompt injection, data exfiltration, and malicious patterns"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "ollama>=0.6.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
geolocation = [
    "geoip2>=4.8.0",
]
language = [
    "langdetect>=1.0.9",
    "deep-translator>=1.11.4",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
all = [
    "geoip2>=4.8.0",
    "langdetect>=1.0.9",
    "deep-translator>=1.11.4",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Repository = "https://github.com/Paul-J-Barrett/skillcheck"
Issues = "https://github.com/Paul-J-Barrett/skillcheck/issues"

[project.scripts]
skillcheck = "main:main"
